--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -1,3 +1,24 @@
 .container {
     height: 10vh;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    border-bottom: 1.5px solid #1B263B;
+}
+
+.navlinks {
+    width: 30vw;
+    height: 5vh;
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.button {
+    color: #0D1B2A;
+}
+
+.imagecontainer {
+    width: 20vw;
+    height: 10vh;
+    position: relative;
 }
