--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -1,3 +1,7 @@
 .container {
-    height: 10vh;
+    height: 5vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-top: 1px solid #283044;
 }
