--- a/styles/Generator.module.css
+++ b/styles/Generator.module.css
@@ -7,7 +7,6 @@
 .ctatext {
     padding: 0 2rem;
     width: 50vw;
-    height: 80vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -21,10 +20,25 @@
     justify-content: center;
 }
 
-.form {
+.formContainer {
     padding: 2rem 3rem;
     width: 50vw;
     display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.form {
+    width: 45vw;
+    height: 75vh;
+    display: flex;
     flex-direction: column;
     justify-content: space-evenly;
+    align-items: center;
+    background-image: linear-gradient(188deg, #3926AD 0%, rgba(133,36,209,0.831) 100%), url(/diamond_background.svg);
+    background-position: 0% 0%, center;
+    background-repeat: repeat, no-repeat;
+    background-size: cover, cover;
+    border-radius: 1rem;
+    box-shadow: 0rem 1.75rem 3.125rem 0.25rem rgb(97 35 53 / 39%);
 }
